Fix mouse cursors on scrollbar. References #73

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -65,6 +65,11 @@ body.document-set-show {
     height: 5%;
 
     .handle {
+      &.right { cursor: e-resize; }
+      &.left { cursor: w-resize; }
+    }
+
+    .middle {
       cursor: move;
     }
   }
